# registry-service

./: .gitignore  CHANGELOG.md  Makefile  README.md
.github/: CODEOWNERS  COMMERCIAL.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  registry_integration.yml
api/: .env  Cargo.toml
api/prisma/: schema.prisma
api/src/: main.rs
api/src/config/: mod.rs
api/src/db/: mod.rs
api/src/middlewares/: mod.rs
api/src/models/: mod.rs
api/src/routes/: auth.rs  mod.rs  packages.rs  users.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: admin.rs  auth.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs  upgrade.rs
cli/src/config/: mod.rs
