[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
colored = "2.0"
dialoguer = "0.11"
dirs = "5.0"
toml = "0.8"
indicatif = "0.17"
